Add Home tag to index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Archlinux Dotfiles,(vimrc,init.vim,i3,irssi,weechat etc.)</h2>
 
         <section id="downloads">
+          <a href="https://wsdjeg.github.io" class="btn">HOME</a>
           <a href="https://github.com/wsdjeg/DotFiles/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/wsdjeg/DotFiles/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/wsdjeg/DotFiles" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
