--- a/index.html
+++ b/index.html
@@ -1,132 +1,136 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Dotfiles by wsdjeg</title>
-  </head>
+        <title>Dotfiles by wsdjeg</title>
+    </head>
 
-  <body>
+    <body>
 
-    <header>
-      <div class="container">
-        <h1>Dotfiles</h1>
-        <h2>Archlinux Dotfiles,(vimrc,init.vim,i3,irssi,weechat etc.)</h2>
+        <header>
+            <div class="container">
+                <h1>Dotfiles</h1>
+                <h2>Archlinux Dotfiles,(vimrc,init.vim,i3,irssi,weechat etc.)</h2>
 
-        <section id="downloads">
-          <a href="https://wsdjeg.github.io" class="btn">HOME</a>
-          <a href="https://github.com/wsdjeg/DotFiles/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/wsdjeg/DotFiles/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/wsdjeg/DotFiles" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+                <section id="downloads">
+                    <a href="https://wsdjeg.github.io" class="btn">HOME</a>
+                    <a href="https://github.com/wsdjeg/DotFiles/zipball/master" class="btn">Download as .zip</a>
+                    <a href="https://github.com/wsdjeg/DotFiles/tarball/master" class="btn">Download as .tar.gz</a>
+                    <a href="https://github.com/wsdjeg/DotFiles" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+                </section>
+            </div>
+        </header>
 
-    <div class="container">
-      <section id="main_content">
-        <h1>
-<a id="awesome-dotfiles" class="anchor" href="#awesome-dotfiles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>awesome-dotfiles</h1>
+        <div class="container">
+            <section id="main_content">
+                <h1>
+                    <a id="awesome-dotfiles" class="anchor" href="#awesome-dotfiles" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>
+                    awesome-dotfiles
+                </h1>
 
-<p><a href="https://gitter.im/wsdjeg/DotFiles?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/wsdjeg/DotFiles.svg" alt="Gitter"></a></p>
+                <p><a href="https://gitter.im/wsdjeg/DotFiles?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/wsdjeg/DotFiles.svg" alt="Gitter"></a></p>
 
-<h3>
-<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h3>
+                <h3>
+                    <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h3>
 
-<ol>
-<li>jdk 1.8</li>
-<li>Vim 7.3.885+ compiled with lua. If :echo has("lua") returns 1, then you're done;</li>
-<li>Recommend to use <a href="https://neovim.io/">neovim</a>
-</li>
-<li>mutt getmail procmail msmtp</li>
-</ol>
+                <ol>
+                    <li>jdk 1.8</li>
+                    <li>Vim 7.3.885+ compiled with lua. If :echo has("lua") returns 1, then you're done;</li>
+                    <li>Recommend to use <a href="https://neovim.io/">neovim</a>
+                    </li>
+                    <li>mutt getmail procmail msmtp</li>
+                </ol>
 
-<h3>
-<a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install</h3>
+                <h3>
+                    <a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install</h3>
 
-<h5>
-<a id="linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h5>
+                <h5>
+                    <a id="linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h5>
 
-<p>you can use the install.sh script for vim or neovim;</p>
+                <p>you can use the install.sh script for vim or neovim;</p>
 
-<div class="highlight highlight-source-shell"><pre>chmod +x install.sh
+                <div class="highlight highlight-source-shell"><pre>chmod +x install.sh
 ./install.sh nvim  <span class="pl-c"># or ./install.sh vim</span></pre></div>
 
-<h3>
-<a id="docs" class="anchor" href="#docs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docs</h3>
+                <h3>
+                    <a id="docs" class="anchor" href="#docs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docs</h3>
 
-<ul>
-<li>VIM <a href="config/nvim">README.md</a>
-</li>
-</ul>
+                <ul>
+                    <li>VIM <a href="config/nvim">README.md</a>
+                    </li>
+                </ul>
 
-<h3>
-<a id="thanks" class="anchor" href="#thanks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Thanks</h3>
+                <h3>
+                    <a id="thanks" class="anchor" href="#thanks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Thanks</h3>
 
-<ul>
-<li><a href="https://github.com/Shougo/deoplete.nvim">deoplete.nvim</a></li>
-</ul>
+                <ul>
+                    <li><a href="https://github.com/Shougo/deoplete.nvim">deoplete.nvim</a></li>
+                </ul>
 
-<blockquote>
-<p>Dark powered asynchronous completion framework for neovim</p>
-</blockquote>
+                <blockquote>
+                    <p>Dark powered asynchronous completion framework for neovim</p>
+                </blockquote>
 
-<ul>
-<li><a href="https://github.com/artur-shaik/vim-javacomplete2">javacomplete2</a></li>
-</ul>
+                <ul>
+                    <li><a href="https://github.com/artur-shaik/vim-javacomplete2">javacomplete2</a></li>
+                </ul>
 
-<blockquote>
-<p>Updated javacomplete plugin for vim</p>
-</blockquote>
+                <blockquote>
+                    <p>Updated javacomplete plugin for vim</p>
+                </blockquote>
 
-<ul>
-<li><a href="https://github.com/Shougo/neosnippet.vim">neosnippet.vim</a></li>
-</ul>
+                <ul>
+                    <li><a href="https://github.com/Shougo/neosnippet.vim">neosnippet.vim</a></li>
+                </ul>
 
-<blockquote>
-<p>neo-snippet plugin contains neocomplcache snippets source</p>
-</blockquote>
+                <blockquote>
+                    <p>neo-snippet plugin contains neocomplcache snippets source</p>
+                </blockquote>
 
-<h2>
-<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
+                <h2>
+                    <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h2>
 
-<h4>
-<a id="termite" class="anchor" href="#termite" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>termite</h4>
+                <h4>
+                    <a id="termite" class="anchor" href="#termite" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>termite</h4>
 
-<p><img src="pic/i3-wm.png" alt="i3-wm"></p>
+                <p><img src="pic/i3-wm.png" alt="i3-wm"></p>
 
-<h4>
-<a id="irssi" class="anchor" href="#irssi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>irssi</h4>
+                <h4>
+                    <a id="irssi" class="anchor" href="#irssi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>irssi</h4>
 
-<p><img src="pic/irssi.png" alt="irssi"></p>
+                <p><img src="pic/irssi.png" alt="irssi"></p>
 
-<h4>
-<a id="neovim--vimyou-can-do-everything-in-vim" class="anchor" href="#neovim--vimyou-can-do-everything-in-vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>neovim &amp;&amp; vim(You can do everything in vim)</h4>
+                <h4>
+                    <a id="neovim--vimyou-can-do-everything-in-vim" class="anchor" href="#neovim--vimyou-can-do-everything-in-vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>neovim &amp;&amp; vim(You can do everything in vim)</h4>
 
-<h5>
-<a id="list-all-the-installed-pluginand-open-plugins-official-website-in-github" class="anchor" href="#list-all-the-installed-pluginand-open-plugins-official-website-in-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the installed plugin,and open plugin's official website in github</h5>
+                <h5>
+                    <a id="list-all-the-installed-pluginand-open-plugins-official-website-in-github" class="anchor" href="#list-all-the-installed-pluginand-open-plugins-official-website-in-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the installed plugin,and open plugin's official website in github</h5>
 
-<p><img src="pic/installed_plugin.png" alt="installed plugins"></p>
+                <p><img src="pic/installed_plugin.png" alt="installed plugins"></p>
 
-<h5>
-<a id="list-all-the-mappings-and-descriptions" class="anchor" href="#list-all-the-mappings-and-descriptions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the mappings and descriptions</h5>
+                <h5>
+                    <a id="list-all-the-mappings-and-descriptions" class="anchor" href="#list-all-the-mappings-and-descriptions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the mappings and descriptions</h5>
 
-<p><img src="pic/list_mappings.png" alt="mappings"></p>
+                <p><img src="pic/list_mappings.png" alt="mappings"></p>
 
-<p><img src="pic/complete.png" alt="complete"></p>
+                <p><img src="pic/complete.png" alt="complete"></p>
 
-<p><img src="pic/check.png" alt="check"></p>
+                <p><img src="pic/check.png" alt="check"></p>
 
-<p><img src="pic/import.png" alt="import"></p>
+                <p><img src="pic/import.png" alt="import"></p>
 
-<p><img src="pic/gradle_project.png" alt="gradle"></p>
-      </section>
-    </div>
+                <p><img src="pic/gradle_project.png" alt="gradle"></p>
+            </section>
+        </div>
 
-    
-  </body>
+
+    </body>
 </html>
