--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
                     awesome-dotfiles
                 </h1>
 
-                <p><a href="https://gitter.im/wsdjeg/DotFiles?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/wsdjeg/DotFiles.svg" alt="Gitter"></a></p>
+                <p>
+                    <a href="https://gitter.im/wsdjeg/DotFiles?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge">
+                        <img src="https://badges.gitter.im/wsdjeg/DotFiles.svg" alt="Gitter">
+                    </a>
+                </p>
 
                 <h3>
-                    <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h3>
+                    <a id="requirements" class="anchor" href="#requirements" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>Requirements
+                </h3>
 
                 <ol>
                     <li>jdk 1.8</li>
@@ -101,12 +108,12 @@
                 <h4>
                     <a id="termite" class="anchor" href="#termite" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>termite</h4>
 
-                <p><img src="pic/i3-wm.png" alt="i3-wm"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/i3-wm.png" alt="i3-wm"></p>
 
                 <h4>
                     <a id="irssi" class="anchor" href="#irssi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>irssi</h4>
 
-                <p><img src="pic/irssi.png" alt="irssi"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/irssi.png" alt="irssi"></p>
 
                 <h4>
                     <a id="neovim--vimyou-can-do-everything-in-vim" class="anchor" href="#neovim--vimyou-can-do-everything-in-vim" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>neovim &amp;&amp; vim(You can do everything in vim)</h4>
@@ -114,20 +121,20 @@
                 <h5>
                     <a id="list-all-the-installed-pluginand-open-plugins-official-website-in-github" class="anchor" href="#list-all-the-installed-pluginand-open-plugins-official-website-in-github" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the installed plugin,and open plugin's official website in github</h5>
 
-                <p><img src="pic/installed_plugin.png" alt="installed plugins"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/installed_plugin.png" alt="installed plugins"></p>
 
                 <h5>
                     <a id="list-all-the-mappings-and-descriptions" class="anchor" href="#list-all-the-mappings-and-descriptions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List all the mappings and descriptions</h5>
 
-                <p><img src="pic/list_mappings.png" alt="mappings"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/list_mappings.png" alt="mappings"></p>
 
-                <p><img src="pic/complete.png" alt="complete"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/complete.png" alt="complete"></p>
 
-                <p><img src="pic/check.png" alt="check"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/check.png" alt="check"></p>
 
-                <p><img src="pic/import.png" alt="import"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/import.png" alt="import"></p>
 
-                <p><img src="pic/gradle_project.png" alt="gradle"></p>
+                <p><img src="https://raw.githubusercontent.com/wsdjeg/DotFiles/master/pic/gradle_project.png" alt="gradle"></p>
             </section>
         </div>
 
